@startuml
!theme plain

entity "users" {
  * id: integer
  --
  * name: varchar(100)
  * last_name: varchar(100)
  * username: varchar(50)
  * password_hash: varchar(255)
  * email: varchar(150)
  * profile_image: varchar(255)
  * birth_date: date
  * phone: varchar(20)
  * created_at: datetime
  * is_verified: boolean
  * last_login: datetime
  * verification_token: varchar(100)
  * reset_token: varchar(100)
  * reset_token_expires: datetime
}

entity "artists" {
  * id: integer
  --
  * stage_name: varchar(100)
  * is_band: boolean
  * biography: text
  * profile_image: varchar(255)  
  * formed_date: date
}

entity "albums" {
  * id: integer
  --
  * name: varchar(150)
  * release_date: date
  * cover_image: varchar(255)
  * artist_id: integer
}

entity "album_song"{
  * id: integer
  --
  * album_id: integer
  * song_id: integer  
}

entity "songs" {
  * id: integer
  --
  * name: varchar(150)
  * duration: integer
  * file_url: varchar(255)  
  * release_date: date
  * album_id: integer
}

entity "genres" {
  * id: integer
  --
  * name: varchar(50)
  * description: text
}

entity "song_genre" {
  * id: integer
  --
  * song_id: integer
  * genre_id: integer
}

entity "song_artist" {
  * id: integer
  --
  * song_id: integer
  * artist_id: integer
}

entity "user_song" {
  * id: integer
  --
  * user_id: integer
  * song_id: integer
  * play_count: integer
  * last_played: datetime
  * favorite: boolean
  * liked_at: datetime
}

entity "playlists" {
  * id: integer
  --
  * user_id: integer
  * name: varchar(100)
  * description: text
  * cover_image: varchar(255)
  * is_public: boolean
  * save_in: integer
  * created_at: datetime
}

entity "playlist_user"{
  *id: integer
  --
  * playlist_id
  * user_id  
}

entity "playlist_song" {
  * id: integer
  --
  * playlist_id: integer
  * song_id: integer
  * added_at: datetime
  * order: integer
}

entity "reviews" {
  * id: integer
  --
  * user_id: integer
  * song_id: integer
  * rating: integer
  * comment: text
  * likes: integer
  * created_at: datetime
}

entity "follows" {
  * id: integer
  --
  * follower_id: integer
  * followed_id: integer
  * followed_type: varchar(20)
  * created_at: datetime
}

' Relaciones
users ||--o{ user_song
users ||--o{ playlists
users ||--o{playlist_user
users ||--o{ reviews

songs ||--o{ user_song
songs ||--o{ playlist_song
songs ||--o{ song_genre
songs ||--o{ reviews

artists ||--o{ albums
artists ||--o{ song_artist

albums ||--o{ songs
albums ||--o{ album_song

songs ||--o{ song_artist
songs ||--o{ album_song

genres ||--o{ song_genre

playlists ||--o{ playlist_song
playlists ||--o{ playlist_user

' Relaciones CORREGIDAS para follows
users ||--o{ follows : "follower"
users ||--o{ follows : "followed"

' Notas
note right of artists
  stage_name permite artistas solistas o bandas.
  is_band = true para grupos, false para solistas.
  formed_date: fecha de formación de la banda
end note

note right of song_artist
  Relación N:M entre canciones y artistas
  (para colaboraciones, feats, etc.)
end note

note right of playlists
  Cada usuario puede tener varias playlists.
  - is_public: true para playlists públicas
  false para playlists privadas  
  - save_in: el numero de playlists guardadas
end note

note right of user_song
  Historial de reproducción y "me gusta"
  para cada usuario en cada canción.
end note

note right of album_song
  La misma cancion puede estar en multiples albumes
  Como albumes recopilatorios, mejores canciones, etc
end note


note right of follows
  followed_type: 'artist' o 'user'
  Permite seguir tanto artistas como otros usuarios
end note

@enduml
